Initial implementation of IsDeactivated param in User model, database migration and check implementation on login, get user jwt and expired jwt

--- a/PatientAnalytics/Utils/Localization/ApiResponseLocalized.de.resx
+++ b/PatientAnalytics/Utils/Localization/ApiResponseLocalized.de.resx
@@ -45,6 +45,9 @@
     <data name="AuthError_WrongPassword" xml:space="preserve">
         <value>Falsches Passwort</value>
     </data>
+    <data name="AuthError_UserIsDeactivated" xml:space="preserve">
+        <value>Der Benutzer ist deaktiviert. Bitte wenden Sie sich für Unterstützung an Ihren Administrator.</value>
+    </data>
     <data name="AuthError_WeakPassword_IsHashLeaked" xml:space="preserve">
         <value>Schwaches Passwort. Dieses Passwort wurde schon einmal durchgesickert. Wählen Sie ein anderes Passwort.</value>
     </data>
