--- a/PatientAnalytics/Utils/Localization/ApiResponseLocalized.resx
+++ b/PatientAnalytics/Utils/Localization/ApiResponseLocalized.resx
@@ -66,6 +66,12 @@
     <data name="AuthError_DecodeJwt_Expired" xml:space="preserve">
         <value>Token is expired. Please login again.</value>
     </data>
+    <data name="UserError_AlreadyActivated" xml:space="preserve">
+        <value>User with id: {0} is already activated</value>
+    </data>
+    <data name="UserError_AlreadyDeactivated" xml:space="preserve">
+        <value>User with id: {0} is already deactivated</value>
+    </data>
     <data name="PatientError_NotFound" xml:space="preserve">
         <value>Unable to locate patient with id: {0}</value>
     </data>
