--- a/PatientAnalytics/Utils/Localization/ApiResponseLocalized.zh.resx
+++ b/PatientAnalytics/Utils/Localization/ApiResponseLocalized.zh.resx
@@ -72,6 +72,9 @@
     <data name="UserError_AlreadyDeactivated" xml:space="preserve">
         <value>ID 為 {0} 的使用者已停用</value>
     </data>
+    <data name="UserError_RequesterConflict" xml:space="preserve">
+        <value>請求必須由其他管理員處理</value>
+    </data>
     <data name="PatientError_NotFound" xml:space="preserve">
         <value>無法找到 ID 為 {0} 的患者</value>
     </data>
