--- a/PatientAnalytics/Blazor/Localization/Localized.de.resx
+++ b/PatientAnalytics/Blazor/Localization/Localized.de.resx
@@ -288,4 +288,22 @@
     <data name="SignalRMessage_UserLoggedOut">
         <value>{0} hat sich abgemeldet.</value>
     </data>
+    <data name="Title_UserDashboard" xml:space="preserve">
+        <value>Benutzer-Dashboard</value>
+    </data>
+    <data name="Button_UserEditAccountInfo" xml:space="preserve">
+        <value>Kontoinformationen bearbeiten</value>
+    </data>
+    <data name="Button_UserActivate" xml:space="preserve">
+        <value>Benutzer aktivieren</value>
+    </data>
+    <data name="Button_UserDeactivate" xml:space="preserve">
+        <value>Benutzer deaktivieren</value>
+    </data>
+    <data name="Title_ActivateUser" xml:space="preserve">
+        <value>Benutzer aktivieren</value>
+    </data>
+    <data name="Title_DeactivateUser" xml:space="preserve">
+        <value>Benutzer deaktivieren</value>
+    </data>
 </root>
