ConfirmationModal updated props usage and BlazorAlertController implementation to all componenets that use ConfirmationModal

--- a/PatientAnalytics/Blazor/Localization/Localized.resx
+++ b/PatientAnalytics/Blazor/Localization/Localized.resx
@@ -306,4 +306,7 @@
     <data name="Title_DeactivateUser" xml:space="preserve">
         <value>Deactivate User</value>
     </data>
+    <data name="Title_DeleteRecord" xml:space="preserve">
+        <value>Delete Record</value>
+    </data>
 </root>
