--- a/PatientAnalytics/Blazor/Localization/Localized.de.resx
+++ b/PatientAnalytics/Blazor/Localization/Localized.de.resx
@@ -306,4 +306,7 @@
     <data name="Title_DeactivateUser" xml:space="preserve">
         <value>Benutzer deaktivieren</value>
     </data>
+    <data name="Title_DeleteRecord" xml:space="preserve">
+        <value>Datensatz löschen</value>
+    </data>
 </root>
